# jax-gnn

./: Justfile  README.md  Taskfile.yml  flake.nix  main.py  mutagen.yml  pyproject.toml  requirements.txt
configs/: default.yaml  template.py
src/: bert.py  dataset.py  gnn.py  trainer.py  utils.py
tests/: test_utils.py
